fix: extra space margins

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
   }
 }
 
+p {
+  margin: 0;
+}
+
 .App-content {
   min-height: 100vh;
   display: flex;
@@ -69,7 +73,25 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
 
+
+.poweredContainer{
+  font-family: 'Urbanist', sans-serif;
+  background: #282c34;
+  position: fixed;
+  z-index: 40;
+  right: 20px;
+  font-weight: bold;
+  bottom: 30px;
+  padding: 10px;
+}
+
+@media (max-width: 768px){
+  .poweredContainer{
+    bottom: 20px;
+    right: 0;
+  }
 }
 
 
@@ -146,6 +168,10 @@
   font-weight: bold;
 }
 
+.timerTitle{
+  margin-bottom: 20px;
+}
+
 .timer > p > span {
   background: #A5C4F9;
   padding: 10px;
@@ -158,15 +184,11 @@
 .paymentBreakdown {
   display: flex;
   justify-content: space-between;
-  background-color: red;
+  align-items: center;
   font-weight: bold;
-}
-
-
-.paymentBreakdown {
   background-color: black;
-  padding: 0 10px;
-  border-radius: 4px;
+  padding: 10px;
+  border-radius: 7px;
   cursor: pointer;
 }
 
@@ -193,6 +215,10 @@
   color: black;
   font-family: 'Urbanist', sans-serif;
   font-weight: 600;
+}
+
+.accordionContent > p {
+  margin-bottom: 20px;
 }
 
 @keyframes slideDown {
@@ -262,7 +288,7 @@
 
 
 .currencyContainer > button {
-  padding: 0px 5px; 
+  padding: 10px 5px; 
   background: #A5C4F9;
   position: relative;
   border: none;
@@ -273,6 +299,12 @@
   justify-content: space-between;
   gap: 20px;
   align-items: center;
+  cursor: pointer;
+}
+
+.coinBtnName {
+  font-weight: bold;
+  font-size: 12px;
 }
 
 
@@ -283,10 +315,11 @@
 }
 
 .currencyModal{
-  background: #004BC4;
+  background: transparent;
   color: white;
   border-radius: 10px;
-  padding: 0px 20px 20px;
+  margin-top: 10px;
+  box-shadow: 0px 0px 2px grey;
   overflow: hidden;
 }
 
@@ -295,30 +328,96 @@
   width: 100%;
   overflow: hidden;
   border-radius: 5px;
+  display: flex;
+}
+
+.closeInput {
+  padding: 0px 20px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: black;
+  color: white;
+  transition: 0.5s;
+}
+
+.closeInput:hover {
+  background: #333;
 }
 
 .searchContainer > input {
   outline: none;
+  padding: 0px 20px;
+  height: 30px;
 }
+
 
 .coinContainer{
   overflow: hidden;
   overflow-y: scroll;
   height: 300px;
+
 }
 
-.coinContainer > .coinContent {
-  background: #A5C4F9;
+
+
+.imageContainer{
   display: flex;
-  justify-content: space-between;
-  padding: 0 20px;
-  border-bottom: 1px solid grey;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  overflow: hidden;
+}
+
+.imageContainer > img{
+  width: 100%;
+  height: 100%;
+}
+
+
+.coinContent {
+  background: transparent;
+  display: flex;
+  gap: 20px;
+  margin: 5px 0;
+  padding: 5px 20px;
+  border-radius: 5px;
+  /* border-bottom: 1px solid grey; */
+  margin-bottom: 20px;
+  cursor: pointer;  
+  color: white;
+  transition: 0.2s ease;
+}
+
+.coinContent:hover {
+  background: #A5C4F9;
+  color: black;
+}
+
+.rightCoin {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: flex-start;
 }
 
 .topContent {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  gap: 30px;
+}
+
+.symbol {
+  font-weight: bold;
+}
+
+.coinName {
+  font-family: 'Urbanist', sans-serif;
+  font-size: 13px;
+  font-weight: 400;
 }
 
 .searchContainer input {
